# BasicRaytracer

./: .gitignore  CMakeLists.txt  README.md
BasicRaytracer/: BasicRaytracer.cpp  BasicRaytracer.h  CMakeLists.txt  Camera.cpp  Camera.h  Color.h  Image.cpp  Image.h  Math.cpp  Math.h  Ray.cpp  Ray.h  Shape.cpp  Shape.h
